--- a/Leetcode.TwoSum/Leetcode.TwoSum.csproj
+++ b/Leetcode.TwoSum/Leetcode.TwoSum.csproj
@@ -5,6 +5,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>twosum</AssemblyName>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    </ItemGroup>
 
 </Project>
